--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
 }
 
 .container{
-  width: min(80%, 80rem);
+  width: 80%;
   margin-inline: auto;
 }
 
@@ -143,10 +143,12 @@ body{
   }
 }
 
-@media (min-width: 62.5em){
+@media (min-width: 68.75em){
+  
+  
 
   .info{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr;
   }
 
   .info__img--mobile{
@@ -163,10 +165,22 @@ body{
   .info__main{
     grid-row: 1 / 2;
     grid-column: 1 / 2;
+    
   }
   .info__main{
     align-self: center;
     text-align: left;
   }
   
+  .info__main__title{
+    font-size: 6rem;
+    margin-top: 15rem;
+  }
+
+  .info__main__para{
+    font-size: 1.7rem;
+  }
+  .info__header__logo{
+    margin-top: 3rem;
+  }
 }
