--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ body{
   cursor: pointer;
 }
 
+.bg-pattern-desktop{
+  display: none;
+}
+
 /* media queries */
 
 @media (min-width: 37.5em){
@@ -145,7 +149,10 @@ body{
 
 @media (min-width: 68.75em){
   
-  
+  body{
+    height: 100vh;
+    overflow: hidden;
+  }
 
   .info{
     grid-template-columns: 1.5fr 1fr;
@@ -157,6 +164,7 @@ body{
 
   .info__img--desktop{
     display: block;
+    width: 100%;
     grid-column:  2 / 3;
     grid-row: 1 / 2;
   }
@@ -182,5 +190,20 @@ body{
   }
   .info__header__logo{
     margin-top: 3rem;
+  }
+
+  .info__header{
+    position: relative;
+  }
+
+  .bg-pattern-desktop{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+    z-index: -100;
   }
 }
