--- a/style.css
+++ b/style.css
@@ -111,26 +111,64 @@ body{
   font-size: 1.3rem;
   outline: none;
   border: none;
-  border: 1px solid hsl(0, 36%, 85%);
+  border: 2px solid hsl(0, 36%, 85%);
   border-radius: 10rem;
-  color: var(--clr-unsaturated-red);
 }
 
 .info__main__form__btn{
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -1px;
+  right: -1px;
   width: 5rem;
-  height: 3.72rem;
+  height: 4rem;
   border-radius: 2rem;
   border: none;
   background: var(--clr-darker-gradient);
   cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.info__main__form__btn:hover{
+  background: linear-gradient(
+    135deg,
+    hsl(0, 80%, 86%),
+    hsl(0, 74%, 90%)
+  );
 }
 
 .bg-pattern-desktop{
   display: none;
 }
+
+.success-border{
+  border: 2px solid green;
+}
+
+.error-border{
+  border: 2px solid red;
+}
+
+.error-svg{
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: translate(-250%, 30%);
+  scale: .9;
+  visibility: hidden;
+}
+
+.error-message{
+  display: block;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  text-align: left;
+  padding-left: 2rem;
+  color: var(--clr-soft-red);
+  visibility: hidden;
+  line-height: 1.6;
+}
+
+
 
 /* media queries */
 
@@ -144,6 +182,9 @@ body{
   }
   .info__main__form__btn{
     width: 6rem;
+  }
+  .error-svg{
+    transform: translate(-300%, 30%);
   }
 }
 
